# personal-fin-hub

./: .gitignore  Makefile  README.md  docker-compose.yml
.agent/: backlog.md
backend/: Dockerfile  Makefile  README.md  config.json  main.py  pyproject.toml
backend/app/: main.py
backend/db/: analytics_queries.py  connection.py  queries.py  schema.sql
backend/models/: __init__.py  enums.py  models.py
backend/routes/: __init__.py  analytics.py  balance_snapshots.py  currencies.py  entities.py  fiscal_exemptions.py  market.py  market_assets.py  portfolio_assets.py  prices.py  schedules.py  transaction_fees.py  transaction_taxes.py  transactions.py  transfers.py
backend/scheduler/: scheduler.py
backend/services/: analytics_svc.py  api_client.py  balance_snapshot_svc.py  config.py  currency_svc.py  entity_svc.py  fiscal_exemption_svc.py  market_asset_svc.py  portfolio_asset_svc.py  price_svc.py  schedule_full_svc.py  schedule_svc.py  transaction_batch_svc.py  transaction_fee_svc.py  transaction_full_svc.py  transaction_svc.py  transaction_tax_svc.py  transfer_svc.py
backend/tests/: test_analytics.py  test_balance_snapshots.py  test_currencies.py  test_entities.py  test_fiscal_exemptions.py  test_market_api_client.py  test_market_assets.py  test_models.py  test_portfolio_assets.py  test_prices.py  test_scheduler.py  test_schedules.py  test_transaction_fees.py  test_transaction_taxes.py  test_transactions.py  test_transfers.py
doc/: architecture_overview.md  calculations.md  calculations_inventory.md  workflow.md
frontend/: Dockerfile  nginx.conf  (+4 more)
(+53 files in other folders)
