[tool.poetry]
name = "fin-hub-api"
version = "0.1.0"
description = ""
authors = ["Luis Andres Velazquez <luisandresvelazquez.d<@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
uvicorn = "^0.36.0"
fastapi = "^0.116.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
